--- a/app/src/main/res/drawable/ic_bottom_explore_s.xml
+++ b/app/src/main/res/drawable/ic_bottom_explore_s.xml
@@ -1,9 +1,14 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="18dp"
-    android:height="18dp"
-    android:viewportWidth="18"
-    android:viewportHeight="18">
-    <path
-        android:pathData="M9,0C4,0 0,4 0,9s4,9 9,9s9,-4 9,-9S14,0 9,0zM10.5,10c-0.4,0.7 -1.4,1 -2.1,0.6c-0.7,-0.4 -1,-1.4 -0.6,-2.1C8,8 9.3,6.8 11.6,5c0,0 0.1,-0.1 0.2,0c0.1,0 0.2,0.1 0.1,0.2C11.2,7.9 10.7,9.5 10.5,10z"
-        android:fillColor="#C8D0D9" />
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportWidth="24"
+    android:viewportHeight="24">
+  <path
+      android:pathData="M12,12m-9,0a9,9 0,1 1,18 0a9,9 0,1 1,-18 0"
+      android:fillColor="#C8D0D9"
+      android:fillType="evenOdd" />
+  <path
+      android:pathData="M13.5,13c0.3,-0.5 0.7,-2.1 1.4,-4.8h0c0,-0.1 0,-0.2 -0.1,-0.2c-0.1,0 -0.1,0 -0.2,0c-2.3,1.8 -3.5,3 -3.8,3.4c-0.4,0.7 -0.2,1.7 0.6,2.1C12.1,14 13,13.8 13.5,13z"
+      android:fillColor="#FFFFFF"
+      android:fillType="evenOdd" />
 </vector>
