--- a/app/src/main/res/drawable/ic_bottom_rss_feed_e.xml
+++ b/app/src/main/res/drawable/ic_bottom_rss_feed_e.xml
@@ -1,18 +1,12 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="24dp"
     android:height="24dp"
-    android:viewportHeight="18"
-    android:viewportWidth="16"
-    android:width="21.333334dp">
+    android:viewportWidth="24"
+    android:viewportHeight="24">
     <path
-        android:fillColor="#5A5F64"
-        android:fillType="nonZero"
-        android:pathData="M13.9991,0L2.0009,0C0.896,0 0,0.907 0,2.025L0,17.1C0,17.6133 0.4143,18 0.8871,18C0.9792,18 1.0748,17.9842 1.1704,17.9525L6.8756,15.6797C7.2404,15.5566 7.6211,15.4951 8,15.4951C8.3789,15.4951 8.7596,15.5566 9.1244,15.6797L14.8296,17.9525C14.9234,17.9842 15.019,18 15.1129,18C15.5857,18 16,17.6133 16,17.1L16,2.025C16,0.907 15.104,0 13.9991,0ZM14.3993,16.0699L9.7211,14.2049L9.6804,14.1891L9.6397,14.175C9.1102,13.9957 8.5595,13.9061 8,13.9061C7.4405,13.9061 6.8898,13.9975 6.3603,14.175L6.3196,14.1891L6.2789,14.2049L1.6007,16.0699L1.6007,2.025C1.6007,1.7842 1.7795,1.5891 2.0009,1.5891L13.9991,1.5891C14.2205,1.5891 14.3993,1.7842 14.3993,2.025L14.3993,16.0699Z"
-        android:strokeColor="#00000000"
-        android:strokeWidth="1" />
+        android:pathData="M18,3H6C4.9,3 4,3.9 4,5v15.1C4,20.6 4.4,21 4.9,21c0.1,0 0.2,0 0.3,0l5.7,-2.3c0.4,-0.1 0.7,-0.2 1.1,-0.2s0.8,0.1 1.1,0.2l5.7,2.3c0.1,0 0.2,0 0.3,0c0.5,0 0.9,-0.4 0.9,-0.9V5C20,3.9 19.1,3 18,3zM18.4,19.1l-4.7,-1.9l0,0l0,0c-0.5,-0.2 -1.1,-0.3 -1.6,-0.3s-1.1,0.1 -1.6,0.3l0,0l0,0l-4.7,1.9V5c0,-0.2 0.2,-0.4 0.4,-0.4h12c0.2,0 0.4,0.2 0.4,0.4V19.1z"
+        android:fillColor="#5A5F64" />
     <path
-        android:fillColor="#5A5F64"
-        android:fillType="nonZero"
-        android:pathData="M10.947,6.4961L8.7863,6.4961L8.7863,4.1914C8.7863,3.7417 8.4349,3.375 8,3.375C7.5668,3.375 7.2137,3.7399 7.2137,4.1914L7.2137,6.4961L5.053,6.4961C4.6198,6.4961 4.2667,6.861 4.2667,7.3125C4.2667,7.7622 4.6181,8.1289 5.053,8.1289L7.2137,8.1289L7.2137,10.4336C7.2137,10.8833 7.5651,11.25 8,11.25C8.4332,11.25 8.7863,10.8851 8.7863,10.4336L8.7863,8.1289L10.947,8.1289C11.3802,8.1289 11.7333,7.764 11.7333,7.3125C11.7333,6.8628 11.3819,6.4961 10.947,6.4961L10.947,6.4961Z"
-        android:strokeColor="#00000000"
-        android:strokeWidth="1" />
+        android:pathData="M14.9,9.5h-2.2V7.2c0,-0.4 -0.4,-0.8 -0.8,-0.8c-0.4,0 -0.8,0.4 -0.8,0.8v2.3H9.1c-0.4,0 -0.8,0.4 -0.8,0.8c0,0.4 0.4,0.8 0.8,0.8h2.2v2.3c0,0.4 0.4,0.8 0.8,0.8c0.4,0 0.8,-0.4 0.8,-0.8v-2.3h2.2c0.4,0 0.8,-0.4 0.8,-0.8C15.7,9.9 15.4,9.5 14.9,9.5L14.9,9.5z"
+        android:fillColor="#5A5F64" />
 </vector>
