--- a/app/src/main/res/drawable/ic_bottom_rss_feed_e.xml
+++ b/app/src/main/res/drawable/ic_bottom_rss_feed_e.xml
@@ -3,10 +3,10 @@
     android:height="24dp"
     android:viewportWidth="24"
     android:viewportHeight="24">
-    <path
-        android:pathData="M18,3H6C4.9,3 4,3.9 4,5v15.1C4,20.6 4.4,21 4.9,21c0.1,0 0.2,0 0.3,0l5.7,-2.3c0.4,-0.1 0.7,-0.2 1.1,-0.2s0.8,0.1 1.1,0.2l5.7,2.3c0.1,0 0.2,0 0.3,0c0.5,0 0.9,-0.4 0.9,-0.9V5C20,3.9 19.1,3 18,3zM18.2,19.1l-4.7,-1.9l0,0l0,0c-0.5,-0.2 -1.1,-0.3 -1.6,-0.3s-1.1,0.1 -1.6,0.3l0,0l0,0l-4.7,1.9V5c0,-0.2 0.2,-0.4 0.4,-0.4H18c0.2,0 0.4,0.2 0.4,0.4v14.1H18.2z"
-        android:fillColor="#5A5F64" />
-    <path
-        android:pathData="M14.9,9.5h-2.2V7.2c0,-0.4 -0.4,-0.8 -0.8,-0.8c-0.4,0 -0.8,0.4 -0.8,0.8v2.3h-2c-0.4,0 -0.8,0.4 -0.8,0.8c0,0.4 0.4,0.8 0.8,0.8h2.2v2.3c0,0.4 0.4,0.8 0.8,0.8c0.4,0 0.8,-0.4 0.8,-0.8v-2.3h2.2c0.4,0 0.8,-0.4 0.8,-0.8C15.7,9.9 15.4,9.5 14.9,9.5L14.9,9.5z"
-        android:fillColor="#5A5F64" />
+  <path
+      android:pathData="M18.5,3.5V19.57l-5.6,-2.8a2,2 0,0 0,-1.8 0l-5.6,2.8V3.5h13m1,-1.5H4.5a0.51,0.51 0,0 0,-0.5 0.5V21.18a0.5,0.5 0,0 0,0.5 0.51,0.59 0.59,0 0,0 0.23,-0.05l7,-3.53a0.55,0.55 0,0 1,0.46 0l7,3.53a0.59,0.59 0,0 0,0.23 0.05,0.5 0.5,0 0,0 0.5,-0.51V2.5a0.51,0.51 0,0 0,-0.5 -0.5Z"
+      android:fillColor="#2f45a6" />
+  <path
+      android:pathData="M15.5,9.25H12.75V6.5a0.5,0.5 0,0 0,-0.5 -0.5h-0.5a0.5,0.5 0,0 0,-0.5 0.5V9.25H8.5a0.5,0.5 0,0 0,-0.5 0.5v0.5a0.5,0.5 0,0 0,0.5 0.5h2.75V13.5a0.5,0.5 0,0 0,0.5 0.5h0.5a0.5,0.5 0,0 0,0.5 -0.5V10.75H15.5a0.5,0.5 0,0 0,0.5 -0.5v-0.5A0.5,0.5 0,0 0,15.5 9.25Z"
+      android:fillColor="#2f45a6" />
 </vector>
