--- a/app/src/main/res/drawable/ic_bottom_rss_feed_s.xml
+++ b/app/src/main/res/drawable/ic_bottom_rss_feed_s.xml
@@ -1,9 +1,24 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:aapt="http://schemas.android.com/aapt"
     android:width="24dp"
     android:height="24dp"
     android:viewportWidth="24"
     android:viewportHeight="24">
-  <path
-      android:pathData="M18,3H6C4.9,3 4,3.9 4,5v15.1C4,20.6 4.4,21 4.9,21c0.1,0 0.2,0 0.3,0l5.7,-2.3c0.4,-0.1 0.7,-0.2 1.1,-0.2s0.8,0.1 1.1,0.2l5.7,2.3c0.1,0 0.2,0 0.3,0c0.5,0 0.9,-0.4 0.9,-0.9V5C20,3.9 19.1,3 18,3zM15.8,11c0,0.4 -0.3,0.8 -0.8,0.8h-2.3V14c0,0.4 -0.3,0.8 -0.8,0.8s-0.8,-0.3 -0.8,-0.8v-2.3H9c-0.4,0 -0.8,-0.3 -0.8,-0.8s0.3,-0.8 0.8,-0.8h2.3V8c0,-0.4 0.3,-0.8 0.8,-0.8s0.8,0.3 0.8,0.8v2.3H15C15.4,10.3 15.8,10.6 15.8,11z"
-      android:fillColor="#C8D0D9" />
+  <path android:pathData="M19.5,2H4.5a0.51,0.51 0,0 0,-0.5 0.5V21.18a0.51,0.51 0,0 0,0.73 0.46l7,-3.53a0.53,0.53 0,0 1,0.46 0l7,3.53a0.51,0.51 0,0 0,0.73 -0.46V2.5A0.51,0.51 0,0 0,19.5 2ZM16,10.25a0.5,0.5 0,0 1,-0.5 0.5H12.75V13.5a0.5,0.5 0,0 1,-0.5 0.5h-0.5a0.5,0.5 0,0 1,-0.5 -0.5V10.75H8.5a0.5,0.5 0,0 1,-0.5 -0.5v-0.5a0.5,0.5 0,0 1,0.5 -0.5h2.75V6.5a0.5,0.5 0,0 1,0.5 -0.5h0.5a0.5,0.5 0,0 1,0.5 0.5V9.25H15.5a0.5,0.5 0,0 1,0.5 0.5Z">
+    <aapt:attr name="android:fillColor">
+      <gradient
+          android:startY="11.84"
+          android:startX="4"
+          android:endY="11.84"
+          android:endX="20"
+          android:type="linear">
+        <item
+            android:offset="0"
+            android:color="#FF5771CE" />
+        <item
+            android:offset="0.99"
+            android:color="#FF2F45A6" />
+      </gradient>
+    </aapt:attr>
+  </path>
 </vector>
