--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,6 +11,7 @@
         android:elevation="10dp"
         android:background="@color/background"
         app:labelVisibilityMode="labeled"
+        app:itemIconSize="26dp"
         app:menu="@menu/main_bnv"
         app:layout_constraintBottom_toBottomOf="parent" />
 
