搜索框改成圆角

--- a/app/src/main/res/layout/view_search.xml
+++ b/app/src/main/res/layout/view_search.xml
@@ -3,8 +3,13 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/search_view"
-        android:layout_width="match_parent"
         android:theme="?attr/actionBarStyle"
-        android:layout_height="wrap_content"
+        android:background="@drawable/bg_searchview"
+        android:layout_width="match_parent"
+        android:layout_height="34dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
         android:imeOptions="actionSearch"
+        app:queryBackground="@drawable/bg_searchview"
+        app:submitBackground="@color/transparent"
         app:defaultQueryHint="搜索"/>
