--- a/app/src/main/res/drawable/bg_searchview.xml
+++ b/app/src/main/res/drawable/bg_searchview.xml
@@ -3,7 +3,9 @@
     <!-- 角度 -->
     <corners android:radius="35dp"/>
     <!-- 填充色 -->
-    <solid android:color="@color/background_menu"/>
+    <solid android:color="@color/transparent30" />
     <!-- 描边 设置线宽及颜色 -->
-    <stroke android:color="@color/background_menu" android:width="0.5dp"/>
+    <stroke
+        android:color="@color/transparent30"
+        android:width="0.5dp" />
 </shape>
