--- a/app/src/main/res/layout/view_search.xml
+++ b/app/src/main/res/layout/view_search.xml
@@ -10,6 +10,6 @@
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
         android:imeOptions="actionSearch"
-    app:queryBackground="@null"
-        app:submitBackground="@color/transparent"
+        app:queryBackground="@null"
+        app:submitBackground="@null"
         app:defaultQueryHint="搜索"/>
