--- a/app/src/main/res/drawable/ic_bottom_books_s.xml
+++ b/app/src/main/res/drawable/ic_bottom_books_s.xml
@@ -1,41 +1,12 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
     android:width="24dp"
     android:height="24dp"
     android:viewportWidth="24"
     android:viewportHeight="24">
-  <path android:pathData="M20.5,5a2.54,2.54 0,0 1,1.1 -0.48,0.49 0.49,0 0,0 0.4,-0.48V3.5a0.5,0.5 0,0 0,-0.5 -0.5H6.17A4.12,4.12 0,0 0,2 6.61,4 4,0 0,0 6,11H21.5a0.5,0.5 0,0 0,0.5 -0.5V10a0.49,0.49 0,0 0,-0.4 -0.48A2.49,2.49 0,0 1,20.5 5Z">
-    <aapt:attr name="android:fillColor">
-      <gradient
-          android:startY="7"
-          android:startX="2"
-          android:endY="7"
-          android:endX="22"
-          android:type="linear">
-        <item
-            android:offset="0"
-            android:color="#FF2F45A6" />
-        <item
-            android:offset="1"
-            android:color="#FF5771CE" />
-      </gradient>
-    </aapt:attr>
-  </path>
-  <path android:pathData="M18,13H2.5a0.5,0.5 0,0 0,-0.5 0.5v0.55a0.49,0.49 0,0 0,0.4 0.48A2.54,2.54 0,0 1,3.5 15a2.48,2.48 0,0 1,0 4,2.54 2.54,0 0,1 -1.1,0.48A0.49,0.49 0,0 0,2 20v0.55a0.5,0.5 0,0 0,0.5 0.5H17.83A4.12,4.12 0,0 0,22 17.39,4 4,0 0,0 18,13Z">
-    <aapt:attr name="android:fillColor">
-      <gradient
-          android:startY="17"
-          android:startX="2"
-          android:endY="17"
-          android:endX="22"
-          android:type="linear">
-        <item
-            android:offset="0"
-            android:color="#FF5771CE" />
-        <item
-            android:offset="1"
-            android:color="#FF2F45A6" />
-      </gradient>
-    </aapt:attr>
-  </path>
+  <path
+      android:pathData="M20,6.5a3,3 0,0 1,2.59 -3A0.5,0.5 0,0 0,23 3V2.5a0.5,0.5 0,0 0,-0.5 -0.5H5.69A4.63,4.63 0,0 0,1 6.06,4.51 4.51,0 0,0 5.5,11h17a0.5,0.5 0,0 0,0.5 -0.5V10a0.5,0.5 0,0 0,-0.41 -0.5A3,3 0,0 1,20 6.5Z"
+      android:fillColor="#2f45a6" />
+  <path
+      android:pathData="M4,17.5a3,3 0,0 1,-2.59 3A0.5,0.5 0,0 0,1 21v0.53a0.5,0.5 0,0 0,0.5 0.5H18.31A4.63,4.63 0,0 0,23 17.94,4.51 4.51,0 0,0 18.5,13H1.5a0.5,0.5 0,0 0,-0.5 0.5V14a0.5,0.5 0,0 0,0.41 0.5A3,3 0,0 1,4 17.5Z"
+      android:fillColor="#2f45a6" />
 </vector>
