--- a/app/src/main/res/drawable/ic_bottom_explore_s.xml
+++ b/app/src/main/res/drawable/ic_bottom_explore_s.xml
@@ -1,24 +1,9 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
     android:width="24dp"
     android:height="24dp"
     android:viewportWidth="24"
     android:viewportHeight="24">
-  <path android:pathData="M12,2C6.5,2 2,6.5 2,12s4.5,10 10,10s10,-4.5 10,-10S17.5,2 12,2zM16.8,7.5L14.1,14c0,0.1 -0.1,0.1 -0.1,0.1l-6.5,2.6c-0.1,0 -0.2,0 -0.3,-0.1c0,0 0,-0.1 0,-0.1L10,10c0,-0.1 0.1,-0.1 0.1,-0.1l6.5,-2.6C16.7,7.2 16.8,7.3 16.8,7.5C16.8,7.5 16.8,7.5 16.8,7.5z">
-    <aapt:attr name="android:fillColor">
-      <gradient
-          android:startY="12"
-          android:startX="2"
-          android:endY="12"
-          android:endX="22"
-          android:type="linear">
-        <item
-            android:offset="0"
-            android:color="#FF5771CE" />
-        <item
-            android:offset="0.99"
-            android:color="#FF2F45A6" />
-      </gradient>
-    </aapt:attr>
-  </path>
+  <path
+      android:pathData="M12,1A11,11 0,1 0,23 12,11 11,0 0,0 12,1ZM17,7.25 L13.74,13.76L7.25,17A0.2,0.2 0,0 1,7 16.75l3.26,-6.51L16.75,7A0.2,0.2 0,0 1,17 7.25Z"
+      android:fillColor="#2f45a6" />
 </vector>
