--- a/app/src/main/res/drawable/ic_bottom_rss_feed_e.xml
+++ b/app/src/main/res/drawable/ic_bottom_rss_feed_e.xml
@@ -4,9 +4,9 @@
     android:viewportWidth="24"
     android:viewportHeight="24">
   <path
-      android:pathData="M18.5,3.5V19.57l-5.6,-2.8a2,2 0,0 0,-1.8 0l-5.6,2.8V3.5h13m1,-1.5H4.5a0.51,0.51 0,0 0,-0.5 0.5V21.18a0.5,0.5 0,0 0,0.5 0.51,0.59 0.59,0 0,0 0.23,-0.05l7,-3.53a0.55,0.55 0,0 1,0.46 0l7,3.53a0.59,0.59 0,0 0,0.23 0.05,0.5 0.5,0 0,0 0.5,-0.51V2.5a0.51,0.51 0,0 0,-0.5 -0.5Z"
+      android:pathData="M19,2.5a0.5,0.5 0,0 1,0.5 0.5V20.45l-6.77,-3.76L12,16.28l-0.73,0.41L4.5,20.45V3A0.5,0.5 0,0 1,5 2.5H19M19,1H5A2,2 0,0 0,3 3V21.3a1,1 0,0 0,1.49 0.87L12,18l7.51,4.17A1,1 0,0 0,21 21.3V3a2,2 0,0 0,-2 -2Z"
       android:fillColor="#2f45a6" />
   <path
-      android:pathData="M15.5,9.25H12.75V6.5a0.5,0.5 0,0 0,-0.5 -0.5h-0.5a0.5,0.5 0,0 0,-0.5 0.5V9.25H8.5a0.5,0.5 0,0 0,-0.5 0.5v0.5a0.5,0.5 0,0 0,0.5 0.5h2.75V13.5a0.5,0.5 0,0 0,0.5 0.5h0.5a0.5,0.5 0,0 0,0.5 -0.5V10.75H15.5a0.5,0.5 0,0 0,0.5 -0.5v-0.5A0.5,0.5 0,0 0,15.5 9.25Z"
+      android:pathData="M15.5,8.75H12.75V6a0.5,0.5 0,0 0,-0.5 -0.5h-0.5a0.5,0.5 0,0 0,-0.5 0.5V8.75H8.5a0.5,0.5 0,0 0,-0.5 0.5v0.5a0.5,0.5 0,0 0,0.5 0.5h2.75V13a0.5,0.5 0,0 0,0.5 0.5h0.5a0.5,0.5 0,0 0,0.5 -0.5V10.25H15.5a0.5,0.5 0,0 0,0.5 -0.5v-0.5A0.5,0.5 0,0 0,15.5 8.75Z"
       android:fillColor="#2f45a6" />
 </vector>
