--- a/app/src/main/res/drawable/ic_bottom_rss_feed_s.xml
+++ b/app/src/main/res/drawable/ic_bottom_rss_feed_s.xml
@@ -1,24 +1,9 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
     android:width="24dp"
     android:height="24dp"
     android:viewportWidth="24"
     android:viewportHeight="24">
-  <path android:pathData="M19.5,2H4.5a0.51,0.51 0,0 0,-0.5 0.5V21.18a0.51,0.51 0,0 0,0.73 0.46l7,-3.53a0.53,0.53 0,0 1,0.46 0l7,3.53a0.51,0.51 0,0 0,0.73 -0.46V2.5A0.51,0.51 0,0 0,19.5 2ZM16,10.25a0.5,0.5 0,0 1,-0.5 0.5H12.75V13.5a0.5,0.5 0,0 1,-0.5 0.5h-0.5a0.5,0.5 0,0 1,-0.5 -0.5V10.75H8.5a0.5,0.5 0,0 1,-0.5 -0.5v-0.5a0.5,0.5 0,0 1,0.5 -0.5h2.75V6.5a0.5,0.5 0,0 1,0.5 -0.5h0.5a0.5,0.5 0,0 1,0.5 0.5V9.25H15.5a0.5,0.5 0,0 1,0.5 0.5Z">
-    <aapt:attr name="android:fillColor">
-      <gradient
-          android:startY="11.84"
-          android:startX="4"
-          android:endY="11.84"
-          android:endX="20"
-          android:type="linear">
-        <item
-            android:offset="0"
-            android:color="#FF5771CE" />
-        <item
-            android:offset="0.99"
-            android:color="#FF2F45A6" />
-      </gradient>
-    </aapt:attr>
-  </path>
+    <path
+        android:pathData="M19,1H5A2,2 0,0 0,3 3V21.3a1,1 0,0 0,1.49 0.87L12,18l7.51,4.17A1,1 0,0 0,21 21.3V3A2,2 0,0 0,19 1ZM16,9.75a0.5,0.5 0,0 1,-0.5 0.5H12.75V13a0.5,0.5 0,0 1,-0.5 0.5h-0.5a0.5,0.5 0,0 1,-0.5 -0.5V10.25H8.5a0.5,0.5 0,0 1,-0.5 -0.5v-0.5a0.5,0.5 0,0 1,0.5 -0.5h2.75V6a0.5,0.5 0,0 1,0.5 -0.5h0.5a0.5,0.5 0,0 1,0.5 0.5V8.75H15.5a0.5,0.5 0,0 1,0.5 0.5Z"
+        android:fillColor="#2f45a6" />
 </vector>
