--- a/app/src/main/res/drawable/ic_launcher_5b.xml
+++ b/app/src/main/res/drawable/ic_launcher_5b.xml
@@ -5,8 +5,8 @@
     android:viewportHeight="108">
     <path
         android:pathData="M0,0h108v108h-108z"
-        android:fillColor="#fff" />
+        android:fillColor="#773B3B" />
     <path
-        android:pathData="M18,75V71.7C29.36,71 42.64,63.47 54,79c11.43,-15.56 24.64,-8 36,-7.32V75h0v5.24c-10,-1.1 -23.9,-3.5 -32.36,-0.07l-0.77,0.45h0.05a1.32,1.32 0,0 0,-0.7 1h0a1.45,1.45 0,0 1,-1.43 1.21H53.41A1.46,1.46 0,0 1,52 81.53a0.06,0.06 0,0 1,0 0,1.3 1.3,0 0,0 -0.58,-0.83l-0.11,-0.08c-0.27,-0.16 -0.54,-0.32 -0.82,-0.47C42,76.71 28,79.14 18,80.23V76.56"
-        android:fillColor="#f3b92c" />
+        android:pathData="M17.9,75v-3.3c11.5,-0.7 25,-8.2 36.5,7.3c11.6,-15.6 25,-8 36.5,-7.3V75l0,0v5.2c-10.2,-1.1 -24.3,-3.5 -32.9,-0.1l-0.8,0.4h0.1c-0.4,0.2 -0.7,0.6 -0.7,1l0,0c-0.1,0.7 -0.7,1.2 -1.5,1.2h-1.4c-0.7,0 -1.4,-0.6 -1.4,-1.3l0,0c-0.1,-0.3 -0.3,-0.6 -0.6,-0.8l-0.1,-0.1c-0.3,-0.2 -0.5,-0.3 -0.8,-0.5c-8.6,-3.4 -22.8,-1 -33,0.1v-3.7"
+        android:fillColor="#DA6363" />
 </vector>
