--- a/app/src/main/res/drawable/ic_launcher1.xml
+++ b/app/src/main/res/drawable/ic_launcher1.xml
@@ -4,66 +4,66 @@
     android:viewportWidth="108"
     android:viewportHeight="108">
     <path
-        android:pathData="M36.77,47.15l-1.87,1.83l0,-18.23l1.98,0.72l-0.11,15.68z"
+        android:pathData="M36.77,46.15l-1.87,1.83l0,-18.23l1.98,0.72l-0.11,15.68z"
         android:fillColor="#fff" />
     <path
-        android:pathData="M40.09,29.44l-1.4,1.7l-1.77,-3.33l3.17,1.63z"
+        android:pathData="M40.09,28.44l-1.4,1.7l-1.77,-3.33l3.17,1.63z"
         android:fillColor="#fff" />
     <path
-        android:pathData="M40.13,31.58l2.44,1.62l-1.1,1.27l-1.34,-2.89z"
+        android:pathData="M40.13,30.58l2.44,1.62l-1.1,1.27l-1.34,-2.89z"
         android:fillColor="#fff" />
     <path
-        android:pathData="M51.49,31.1l-0.04,16.01l-1.88,1.89l-2.67,-2.66l2.67,0.55l0,-16.67l-7.69,0l-0.44,-0.43l8.04,0l0.97,-1.09l1.78,1.33l-0.74,1.07z"
+        android:pathData="M51.49,30.1l-0.04,16.01l-1.88,1.89l-2.67,-2.66l2.67,0.55l0,-16.67l-7.69,0l-0.44,-0.43l8.04,0l0.97,-1.09l1.78,1.33l-0.74,1.07z"
         android:fillColor="#fff" />
     <path
-        android:pathData="M43.91,46.12l1.55,-0.67h3.33l-1.33,-1.66 -0.83,1.1L45.46,44.89L45.46,39.35l-1.09,-0.56h3L47.37,35.73l0.54,-0.7L46.15,33.9l-0.78,1L44,34.9l2.82,-3.28 -2,-0.66 -1.14,3.94h-3l-1.57,-0.67L39.11,40l1.57,-1.2h0.59L38,46.52l5.09,-7.17 -1.37,-0.56h2.08l0.06,6.1ZM40.65,38.27v-3h4.72v3Z"
+        android:pathData="M43.91,45.12l1.55,-0.67h3.33l-1.33,-1.66 -0.83,1.1L45.46,43.89L45.46,38.35l-1.09,-0.56h3L47.37,34.73l0.54,-0.7L46.15,32.9l-0.78,1L44,33.9l2.82,-3.28 -2,-0.66 -1.14,3.94h-3l-1.57,-0.67L39.11,39l1.57,-1.2h0.59L38,45.52l5.09,-7.17 -1.37,-0.56h2.08l0.06,6.1ZM40.65,37.27v-3h4.72v3Z"
         android:fillColor="#fff" />
     <path
-        android:pathData="M57.78,47.56l-1.67,-1.67c0.82,-0.4 1.53,-0.83 1.53,-0.83V35.21H55l-0.45,-0.53H57.4l1,-1.13 1.86,1.14 -0.55,0.78v8.65l2.77,-1.56Z"
+        android:pathData="M57.78,46.56l-1.67,-1.67c0.82,-0.4 1.53,-0.83 1.53,-0.83V34.21H55l-0.45,-0.53H57.4l1,-1.13 1.86,1.14 -0.55,0.78v8.65l2.77,-1.56Z"
         android:fillColor="#fff" />
     <path
-        android:pathData="M68.24,41.26l3.58,0l1.23,-1.51l2.15,2.04l-6.94,0.04l-6.27,7.14l4.33,-7.14l-5.07,0l-0.53,-0.57l5.57,0l0,-6.14l1.95,0.68l0,5.46z"
+        android:pathData="M68.24,40.26l3.58,0l1.23,-1.51l2.15,2.04l-6.94,0.04l-6.27,7.14l4.33,-7.14l-5.07,0l-0.53,-0.57l5.57,0l0,-6.14l1.95,0.68l0,5.46z"
         android:fillColor="#fff" />
     <path
-        android:pathData="M68.06,30.92l2.28,0l1.05,-1.05l1.7,1.6l-5.03,0l0,2.6l3.92,-0.05l0.45,-0.91l2.05,1.87l-3.5,1.82l0.78,-2.22l-10.3,0.01l-0.48,-0.52l5.16,0l0,-2.6l-3.8,0l-0.48,-0.55l4.28,0l0,-3.14l1.92,0.58l0,2.56z"
+        android:pathData="M68.06,29.92l2.28,0l1.05,-1.05l1.7,1.6l-5.03,0l0,2.6l3.92,-0.05l0.45,-0.91l2.05,1.87l-3.5,1.82l0.78,-2.22l-10.3,0.01l-0.48,-0.52l5.16,0l0,-2.6l-3.8,0l-0.48,-0.55l4.28,0l0,-3.14l1.92,0.58l0,2.56z"
         android:fillColor="#fff" />
     <path
-        android:pathData="M63.08,35.38l2.69,0.97l-0.89,1.55l-1.8,-2.52z"
+        android:pathData="M63.08,34.38l2.69,0.97l-0.89,1.55l-1.8,-2.52z"
         android:fillColor="#fff" />
     <path
-        android:pathData="M61.63,37.71l3.25,1.19l-1.09,1.78l-2.16,-2.97z"
+        android:pathData="M61.63,36.71l3.25,1.19l-1.09,1.78l-2.16,-2.97z"
         android:fillColor="#fff" />
     <path
-        android:pathData="M73.64,46.23l-1.53,2.13l-4.13,-4.85l5.66,2.72z"
+        android:pathData="M73.64,45.23l-1.53,2.13l-4.13,-4.85l5.66,2.72z"
         android:fillColor="#fff" />
     <path
-        android:pathData="M59.55,30.14l-1.66,1.88l-1.78,-3.66l3.44,1.78z"
+        android:pathData="M59.55,29.14l-1.66,1.88l-1.78,-3.66l3.44,1.78z"
         android:fillColor="#fff" />
     <path
-        android:pathData="M40.79,50.83H39.16A0.16,0.16 0,0 0,39 51v4.24a0.16,0.16 0,0 0,0.16 0.16h0.17a0.16,0.16 0,0 0,0.16 -0.16V51.32h1.3Z"
+        android:pathData="M39,50.55H37.18a0.18,0.18 0,0 0,-0.18 0.18v4.78a0.18,0.18 0,0 0,0.18 0.19h0.19a0.18,0.18 0,0 0,0.18 -0.19V51.1H39Z"
         android:fillColor="#fff" />
     <path
-        android:pathData="M41.08,53.41a1.31,1.31 0,0 0,-0.29 -2.58v0.49a0.82,0.82 0,0 1,0 1.63H40.3l1.24,2.34a0.21,0.21 0,0 0,0.18 0.1h0.44Z"
+        android:pathData="M39.35,53.45a1.47,1.47 0,0 0,-0.33 -2.9v0.55a0.92,0.92 0,0 1,0.92 0.92,0.91 0.91,0 0,1 -0.87,0.91h-0.6l1.4,2.64a0.23,0.23 0,0 0,0.2 0.12h0.5Z"
         android:fillColor="#fff" />
     <path
-        android:pathData="M50.51,52.3v0.3a1.63,1.63 0,1 0,-1.14 2.79,1.59 1.59,0 0,0 1.14,-0.46v0.3a0.16,0.16 0,0 0,0.16 0.16h0.17a0.16,0.16 0,0 0,0.16 -0.16L51,52.3a0.16,0.16 0,0 0,-0.16 -0.16h-0.17A0.16,0.16 0,0 0,50.51 52.3ZM49.59,54.88a1.14,1.14 0,1 1,0.9 -0.89A1.14,1.14 0,0 1,49.59 54.88Z"
+        android:pathData="M50,52.2v0.35A1.8,1.8 0,0 0,48.53 52,1.84 1.84,0 1,0 50,55.17v0.34a0.18,0.18 0,0 0,0.18 0.19h0.18a0.18,0.18 0,0 0,0.19 -0.19L50.55,52.2a0.18,0.18 0,0 0,-0.19 -0.18h-0.18A0.18,0.18 0,0 0,50 52.2ZM49,55.12a1.28,1.28 0,0 1,-1.51 -1.51,1.26 1.26,0 0,1 1,-1A1.28,1.28 0,0 1,50 54.11,1.26 1.26,0 0,1 49,55.12Z"
         android:fillColor="#fff" />
     <path
-        android:pathData="M54.92,51V52.6a1.63,1.63 0,0 0,-1.3 -0.46,1.63 1.63,0 0,0 0.16,3.25 1.59,1.59 0,0 0,1.14 -0.46v0.3a0.17,0.17 0,0 0,0.17 0.16h0.16a0.16,0.16 0,0 0,0.16 -0.16V51a0.16,0.16 0,0 0,-0.16 -0.16h-0.16A0.17,0.17 0,0 0,54.92 51ZM54,54.88a1.14,1.14 0,0 1,-1.35 -1.34A1.14,1.14 0,0 1,54.9 54,1.12 1.12,0 0,1 54,54.88Z"
+        android:pathData="M55,50.73v1.82A1.8,1.8 0,0 0,53.51 52a1.84,1.84 0,0 0,0.18 3.67A1.82,1.82 0,0 0,55 55.17v0.34a0.18,0.18 0,0 0,0.18 0.19h0.19a0.18,0.18 0,0 0,0.18 -0.19L55.55,50.73a0.18,0.18 0,0 0,-0.18 -0.18h-0.19A0.18,0.18 0,0 0,55 50.73ZM54,55.12a1.28,1.28 0,0 1,-1.51 -1.51,1.26 1.26,0 0,1 1,-1A1.28,1.28 0,0 1,55 54.11,1.26 1.26,0 0,1 53.94,55.12Z"
         android:fillColor="#fff" />
     <path
-        android:pathData="M45,52.14a1.62,1.62 0,0 0,-1.63 1.68A1.65,1.65 0,0 0,45 55.39a1.62,1.62 0,0 0,1.45 -0.89h-0.49a0.2,0.2 0,0 0,-0.15 0.06,1.12 1.12,0 0,1 -0.81,0.34A1.13,1.13 0,0 1,43.85 54h2.72a2,2 0,0 0,0 -0.25A1.62,1.62 0,0 0,45 52.14ZM45,52.62a1.15,1.15 0,0 1,1.11 0.9L43.85,53.52A1.14,1.14 0,0 1,45 52.62Z"
+        android:pathData="M43.73,52a1.84,1.84 0,0 0,-1.84 1.9,1.86 1.86,0 0,0 1.84,1.78 1.83,1.83 0,0 0,1.64 -1h-0.56a0.2,0.2 0,0 0,-0.16 0.07,1.29 1.29,0 0,1 -2.18,-0.63h3.07a1.24,1.24 0,0 0,0 -0.27A1.84,1.84 0,0 0,43.73 52ZM43.73,52.55a1.31,1.31 0,0 1,1.26 1L42.47,53.55A1.3,1.3 0,0 1,43.73 52.57Z"
         android:fillColor="#fff" />
     <path
-        android:pathData="M59.65,50.26L68.5,50.26A1.5,1.5 0,0 1,70 51.76L70,54.23A1.5,1.5 0,0 1,68.5 55.73L59.65,55.73A1.5,1.5 0,0 1,58.15 54.23L58.15,51.76A1.5,1.5 0,0 1,59.65 50.26z"
+        android:pathData="M60.12,49.98L70.5,49.98A1.5,1.5 0,0 1,72 51.48L72,54.66A1.5,1.5 0,0 1,70.5 56.16L60.12,56.16A1.5,1.5 0,0 1,58.62 54.66L58.62,51.48A1.5,1.5 0,0 1,60.12 49.98z"
         android:fillColor="#ff6161" />
     <path
-        android:pathData="M62.64,54.58a0.36,0.36 0,0 1,-0.36 0.36H59.69v-0.45h2.43V53.32H59.69v-0.45h2.43V51.76H59.69v-0.45h2.59a0.36,0.36 0,0 1,0.36 0.36Z"
+        android:pathData="M63.69,54.71a0.41,0.41 0,0 1,-0.41 0.41H60.36v-0.51H63.1V53.28H60.36v-0.5H63.1V51.53H60.36V51h2.92a0.41,0.41 0,0 1,0.41 0.41Z"
         android:fillColor="#fff" />
     <path
-        android:pathData="M64.29,54.84H63.6v-0.66h0.69Z"
+        android:pathData="M65.55,55h-0.77v-0.74h0.77Z"
         android:fillColor="#fff" />
     <path
-        android:pathData="M67.82,54.94L65.57,54.94a0.36,0.36 0,0 1,-0.37 -0.36v-2.9a0.36,0.36 0,0 1,0.37 -0.37h2.25a0.36,0.36 0,0 1,0.37 0.37v2.9A0.36,0.36 0,0 1,67.82 54.94ZM67.69,54.49L67.69,51.76h-2v2.73Z"
+        android:pathData="M69.54,55.12L67,55.12a0.41,0.41 0,0 1,-0.41 -0.42L66.59,51.43A0.41,0.41 0,0 1,67 51h2.55a0.41,0.41 0,0 1,0.42 0.41L69.97,54.7A0.42,0.42 0,0 1,69.54 55.12ZM69.39,54.61L69.39,51.53L67.15,51.53v3.08Z"
         android:fillColor="#fff" />
 </vector>
