--- a/app/src/main/res/values/array_values.xml
+++ b/app/src/main/res/values/array_values.xml
@@ -8,6 +8,7 @@
         <item>launcher3</item>
         <item>launcher4</item>
         <item>launcher5</item>
+        <item>launcher6</item>
     </string-array>
 
     <string-array name="screen_time_out_value">
