--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -81,6 +81,7 @@
         <item>icon3</item>
         <item>icon4</item>
         <item>icon5</item>
+        <item>icon6</item>
     </string-array>
 
     <string-array name="chinese_mode">
