--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -173,4 +173,17 @@
         <attr name="bgColor" format="color" />
         <attr name="arcDirectionTop" format="boolean" />
     </declare-styleable>
+
+
+    <declare-styleable name="ShadowLayout"><attr format="color" name="shadowColor"/><attr format="dimension" name="shadowRadius"/><attr format="dimension" name="shadowDx"/><attr format="dimension" name="shadowDy"/><attr name="shadowShape">
+        <flag name="rectangle" value="0x0001"/>
+        <flag name="oval" value="0x0010"/>
+        </attr><attr name="shadowSide">
+            <flag name="all" value="0x1111"/>
+            <flag name="left" value="0x0001"/>
+            <flag name="top" value="0x0010"/>
+            <flag name="right" value="0x0100"/>
+            <flag name="bottom" value="0x1000"/>
+        </attr>
+    </declare-styleable>
 </resources>
