--- a/app/src/main/res/drawable/ic_add.xml
+++ b/app/src/main/res/drawable/ic_add.xml
@@ -1,11 +1,9 @@
-<?xml version="1.0" encoding="utf-8"?>
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="24dp"
+    android:width="48dp"
     android:height="24dp"
-    android:viewportWidth="24"
+    android:viewportWidth="48"
     android:viewportHeight="24">
-
-    <path
-        android:fillColor="#595757"
-        android:pathData="M12.822,20 L11.177,20 L11.177,12.821 L4,12.821 L4,11.178 L11.178,11.178 L11.178,4 L12.823,4 L12.823,11.179 L20,11.179 L20,12.822 L12.822,12.822 L12.822,20 Z" />
+  <path
+      android:pathData="M30,7.32L26.23,7.32a1.49,1.49 0,0 1,-1 -0.42L24,5.74a1.49,1.49 0,0 0,-1 -0.42L18,5.32a2,2 0,0 0,-2 2v10a2,2 0,0 0,2 2L30,19.32a2,2 0,0 0,2 -2v-8A2,2 0,0 0,30 7.32ZM18,6.82h4.94L24.15,8a3,3 0,0 0,2.08 0.83L30,8.83a0.5,0.5 0,0 1,0.5 0.5v1.25h-13L17.5,7.32A0.5,0.5 0,0 1,18 6.82ZM30,17.82L18,17.82a0.5,0.5 0,0 1,-0.5 -0.5L17.5,12.07h13v5.25A0.5,0.5 0,0 1,30 17.82Z"
+      android:fillColor="#3f3f3f"/>
 </vector>
