--- a/app/src/main/res/layout/view_preference_category.xml
+++ b/app/src/main/res/layout/view_preference_category.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical" >
@@ -18,7 +19,7 @@
         android:paddingLeft="16dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        />
+        tools:ignore="RtlHardcoded,RtlSymmetry" />
 
     <View
         android:id="@+id/preference_divider_below"
