--- a/app/src/main/res/layout/view_preference_category.xml
+++ b/app/src/main/res/layout/view_preference_category.xml
@@ -13,8 +13,8 @@
 
     <TextView
         android:id="@+id/preference_title"
-        android:paddingTop="16dip"
-        android:paddingBottom="8dip"
+        android:paddingTop="16dp"
+        android:paddingBottom="8dp"
         android:background="@drawable/bg_prefs_color"
         android:paddingLeft="16dp"
         android:layout_width="match_parent"
