--- a/app/src/main/res/xml/pref_config_other.xml
+++ b/app/src/main/res/xml/pref_config_other.xml
@@ -45,6 +45,13 @@
             android:title="@string/threads_num_title"
             app:iconSpaceReserved="false" />
 
+        <io.legado.app.ui.widget.prefs.SwitchPreference
+            android:defaultValue="true"
+            android:key="mediaButtonOnExit"
+            android:title="@string/media_button_on_exit_title"
+            android:summary="@string/media_button_on_exit_summary"
+            app:iconSpaceReserved="false" />
+
         <io.legado.app.ui.widget.prefs.Preference
             android:key="webPort"
             android:title="@string/web_port_title"
