--- a/app/src/main/res/xml/about.xml
+++ b/app/src/main/res/xml/about.xml
@@ -4,8 +4,8 @@
 
     <io.legado.app.ui.widget.prefs.Preference
         android:key="contributors"
-        android:title="开发人员"
-        android:summary="gedoor,Invinciblelee等, 详情请在github中查看"
+            android:title="@string/contributors"
+            android:summary="gedoor,Invinciblelee等, 详情请在github中查看"
         app:iconSpaceReserved="false" />
 
     <io.legado.app.ui.widget.prefs.Preference
@@ -21,23 +21,23 @@
         app:iconSpaceReserved="false" />
 
     <io.legado.app.ui.widget.prefs.PreferenceCategory
-        android:title="联系我们"
-        app:layout="@layout/view_preference_category"
+            android:title="@string/contact"
+            app:layout="@layout/view_preference_category"
         app:allowDividerAbove="true"
         app:allowDividerBelow="false"
         app:iconSpaceReserved="false">
 
         <io.legado.app.ui.widget.prefs.Preference
-            android:key="gzGzh"
-            android:title="关注公众号"
-            android:summary="开源阅读软件"
-            app:iconSpaceReserved="false" />
+                android:key="gzGzh"
+                android:title="@string/follow_official_account"
+                android:summary="@string/official_account"
+                app:iconSpaceReserved="false" />
 
         <io.legado.app.ui.widget.prefs.Preference
             android:key="qq"
             android:title="@string/join_qq_group"
-            android:summary="点击加入"
-            app:iconSpaceReserved="false" />
+                android:summary="@string/click_to_apply"
+                app:iconSpaceReserved="false" />
 
         <io.legado.app.ui.widget.prefs.Preference
             android:key="mail"
@@ -62,16 +62,16 @@
     </io.legado.app.ui.widget.prefs.PreferenceCategory>
 
     <io.legado.app.ui.widget.prefs.PreferenceCategory
-        android:title="其它"
-        app:layout="@layout/view_preference_category"
+            android:title="@string/other"
+            app:layout="@layout/view_preference_category"
         app:allowDividerAbove="true"
         app:allowDividerBelow="false"
         app:iconSpaceReserved="false">
 
         <io.legado.app.ui.widget.prefs.Preference
-            android:key="license"
-            android:title="开源许可"
-            app:iconSpaceReserved="false" />
+                android:key="license"
+                android:title="@string/license"
+                app:iconSpaceReserved="false" />
 
         <io.legado.app.ui.widget.prefs.Preference
             android:key="disclaimer"
