--- a/app/src/main/res/layout/dialog_tip_config.xml
+++ b/app/src/main/res/layout/dialog_tip_config.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:padding="16dp"
     android:orientation="vertical">
 
     <io.legado.app.ui.widget.text.AccentTextView
